--- a/index.htm
+++ b/index.htm
@@ -6,31 +6,31 @@
     <meta name="viewport" id="metaViewport" content="user-scalable=no, initial-scale=1, width=device-width, viewport-fit=cover" data-tdv-general-scale="0.5"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <script src="lib/tdvplayer.js?v=1702059626281"></script>
-    <link rel="shortcut icon" href="favicon.ico?v=1702059626281">
-	<link rel="icon" sizes="48x48 32x32 16x16" href="favicon.ico?v=1702059626281">
-	<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="misc/icon180.png?v=1702059626281">
-	<link rel="icon" type="image/png" sizes="16x16" href="misc/icon16.png?v=1702059626281">
-	<link rel="icon" type="image/png" sizes="32x32" href="misc/icon32.png?v=1702059626281">
-	<link rel="icon" type="image/png" sizes="192x192" href="misc/icon192.png?v=1702059626281">
-	<link rel="manifest" href="manifest.json?v=1702059626281">
-	<meta name="msapplication-TileColor" content="#FF6600">
+    <script src="lib/tdvplayer.js?v=1702063907970"></script>
+    <link rel="shortcut icon" href="favicon.ico?v=1702063907970">
+	<link rel="icon" sizes="48x48 32x32 16x16" href="favicon.ico?v=1702063907970">
+	<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="misc/icon180.png?v=1702063907970">
+	<link rel="icon" type="image/png" sizes="16x16" href="misc/icon16.png?v=1702063907970">
+	<link rel="icon" type="image/png" sizes="32x32" href="misc/icon32.png?v=1702063907970">
+	<link rel="icon" type="image/png" sizes="192x192" href="misc/icon192.png?v=1702063907970">
+	<link rel="manifest" href="manifest.json?v=1702063907970">
+	<meta name="msapplication-TileColor" content="#FFFFFF">
 	<meta name="msapplication-config" content="browserconfig.xml">
-	<link rel="preload" href="locale/pt.txt?v=1702059626281" as="fetch" crossorigin="anonymous"/>
-	<link rel="preload" href="script.js?v=1702059626281" as="script"/>
-	<link rel="preload" href="media/panorama_5F6A40CD_08D2_BE0F_41C5_51BA380510DE_0/r/2/0_0.jpg?v=1702059626281" as="image"/>
-	<link rel="preload" href="media/panorama_5F6A40CD_08D2_BE0F_41C5_51BA380510DE_0/l/2/0_0.jpg?v=1702059626281" as="image"/>
-	<link rel="preload" href="media/panorama_5F6A40CD_08D2_BE0F_41C5_51BA380510DE_0/u/2/0_0.jpg?v=1702059626281" as="image"/>
-	<link rel="preload" href="media/panorama_5F6A40CD_08D2_BE0F_41C5_51BA380510DE_0/d/2/0_0.jpg?v=1702059626281" as="image"/>
-	<link rel="preload" href="media/panorama_5F6A40CD_08D2_BE0F_41C5_51BA380510DE_0/f/2/0_0.jpg?v=1702059626281" as="image"/>
-	<link rel="preload" href="media/panorama_5F6A40CD_08D2_BE0F_41C5_51BA380510DE_0/b/2/0_0.jpg?v=1702059626281" as="image"/>
+	<link rel="preload" href="locale/pt.txt?v=1702063907970" as="fetch" crossorigin="anonymous"/>
+	<link rel="preload" href="script.js?v=1702063907970" as="script"/>
+	<link rel="preload" href="media/panorama_5F6A40CD_08D2_BE0F_41C5_51BA380510DE_0/r/2/0_0.jpg?v=1702063907970" as="image"/>
+	<link rel="preload" href="media/panorama_5F6A40CD_08D2_BE0F_41C5_51BA380510DE_0/l/2/0_0.jpg?v=1702063907970" as="image"/>
+	<link rel="preload" href="media/panorama_5F6A40CD_08D2_BE0F_41C5_51BA380510DE_0/u/2/0_0.jpg?v=1702063907970" as="image"/>
+	<link rel="preload" href="media/panorama_5F6A40CD_08D2_BE0F_41C5_51BA380510DE_0/d/2/0_0.jpg?v=1702063907970" as="image"/>
+	<link rel="preload" href="media/panorama_5F6A40CD_08D2_BE0F_41C5_51BA380510DE_0/f/2/0_0.jpg?v=1702063907970" as="image"/>
+	<link rel="preload" href="media/panorama_5F6A40CD_08D2_BE0F_41C5_51BA380510DE_0/b/2/0_0.jpg?v=1702063907970" as="image"/>
 	<script src="scorm.js" type="text/javascript"></script>
 	<meta name="description" content="Avenida Europa, 110 - Jardim Europa, São Paulo"/>
-	<meta name="theme-color" content="#FF6600"/>
-    <script src="script.js?v=1702059626281"></script>
+	<meta name="theme-color" content="#FFFFFF"/>
+    <script src="script.js?v=1702063907970"></script>
     <script type="text/javascript">
         var tour;
-        var devicesUrl = {"mobile":"script_mobile.js?v=1702059626281","general":"script_general.js?v=1702059626281"};
+        var devicesUrl = {"mobile":"script_mobile.js?v=1702063907970","general":"script_general.js?v=1702063907970"};
 
         (function()
         {
@@ -73,9 +73,9 @@
 
             var settings = new TDV.PlayerSettings();
             settings.set(TDV.PlayerSettings.CONTAINER, document.getElementById('viewer'));
-            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1702059626281');
-            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1702059626281');
-            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1702059626281');
+            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1702063907970');
+            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1702063907970');
+            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1702063907970');
 
             tour = new TDV.Tour(settings, devicesUrl);
             tour.bind(TDV.Tour.EVENT_TOUR_INITIALIZED, onVirtualTourInit);
@@ -328,12 +328,12 @@
         .fill-viewport.landscape-left { left: env(safe-area-inset-left); }
 		.fill-viewport.landscape-right { right: env(safe-area-inset-right); }
         #viewer { z-index:1; }
-        #preloadContainer { z-index:2; opacity:0; background-color:rgba(255,102,0,1); transition: opacity 0.5s; -webkit-transition: opacity 0.5s; -moz-transition: opacity 0.5s; -o-transition: opacity 0.5s;}
+        #preloadContainer { z-index:2; opacity:0; background-color:rgba(255,255,255,1); transition: opacity 0.5s; -webkit-transition: opacity 0.5s; -moz-transition: opacity 0.5s; -o-transition: opacity 0.5s;}
     </style>
-    <link rel="stylesheet" href="fonts.css?v=1702059626281">
+    <link rel="stylesheet" href="fonts.css?v=1702063907970">
 </head>
 <body>
-    <div id="preloadContainer" class="fill-viewport"><div style="z-index: 4; position: absolute; overflow: hidden; background-size: contain; background-image: url('loading/HTMLImage_5A444827_0B3D_CE3B_417E_B8E101F9D814.png'); background-repeat: no-repeat; background-position: center center; overflow: hidden; left: 6.74%; top: 5.98%; width: 87.50%; height: 42.71%" ></div><div style="z-index: 5; position: absolute; overflow: hidden; background-size: contain; background-image: url('loading/HTMLImage_5AFE30FD_0B3F_DE0F_41C9_2ACCD59FB4A3.png'); background-repeat: no-repeat; background-position: center center; overflow: hidden; right: 0%; top: 44.94%; width: 100.00%; height: 55.06%" ></div><div style="z-index: 6; position: absolute; overflow: hidden; left: 0%; top: 50%; width: 100.00%; height: 10.00%" ><div style="text-align:left; color:#000; "><DIV STYLE="text-align:center;font-size:1.6666666666666659vmin;"><SPAN STYLE="display:inline-block; letter-spacing:0vmin; white-space:pre-wrap;color:#777777;font-size:1.67vmin;font-family:Arial, Helvetica, sans-serif;">Loading virtual tour. Please wait...</SPAN></DIV></div></div></div>
+    <div id="preloadContainer" class="fill-viewport"><div style="z-index: 4; position: absolute; overflow: hidden; background-size: contain; background-image: url('loading/HTMLImage_5A444827_0B3D_CE3B_417E_B8E101F9D814.png'); background-repeat: no-repeat; background-position: center center; overflow: hidden; left: 6.74%; top: 5.98%; width: 87.50%; height: 42.71%" ></div><div style="z-index: 5; position: absolute; overflow: hidden; background-size: contain; background-image: url('loading/HTMLImage_5AFE30FD_0B3F_DE0F_41C9_2ACCD59FB4A3.png'); background-repeat: no-repeat; background-position: center center; overflow: hidden; right: 0%; top: 44.94%; width: 100.00%; height: 55.06%" ></div><div style="z-index: 6; position: absolute; overflow: hidden; left: 0%; top: 50%; width: 100.00%; height: 10.00%" ><div style="text-align:left; color:#000; "><DIV STYLE="text-align:center;font-size:1.666666666666666vmin;"><SPAN STYLE="display:inline-block; letter-spacing:0vmin; white-space:pre-wrap;color:#777777;font-size:1.67vmin;font-family:Arial, Helvetica, sans-serif;">Loading virtual tour. Please wait...</SPAN></DIV></div></div></div>
     <div id="viewer" class="fill-viewport"></div>
 </body>
 </html>
